# agent-state-storage

./: .gitignore  BUILD.md  Makefile  README.md
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  task-6-report.md
changelog.d/: b-ingest.md
docs/architecture/: integration-stack.md
docs/design/: ss2-spike-q3-verdict.md
docs/superpowers/plans/: 2026-07-01-a9-dr-warm-standby.md  2026-07-02-a9-grpc-replicafetch-surface.md  2026-07-18-ss2-spine-spike.md  2026-07-20-b-plane-dram-ingest.md
docs/superpowers/specs/: 2026-07-01-a9-cross-cluster-dr-federation-design.md  2026-07-20-b-plane-dram-ingest-design.md
scripts/: build.sh  test.sh
src/: .gitignore  CMakeLists.txt  README.md
src/adapters/: conftest.py
src/adapters/aibrix/: README.md  pyproject.toml
src/adapters/aibrix/kvcache_aibrix/: __init__.py  async_load.py  backend.py
src/adapters/aibrix/tests/: test_aibrix_async.py
src/adapters/core/kvcache_core/: _ffi.py  connector.py
src/adapters/core/tests/: test_connector_hash.py  test_kv_compress.py
src/adapters/dynamo/kvcache_dynamo/: __init__.py  async_load.py  backend.py
src/adapters/dynamo/tests/: test_dynamo_async.py  test_dynamo_backend.py  test_dynamo_compress.py
src/adapters/lmdeploy/kvcache_lmdeploy/: __init__.py  async_load.py  backend.py
src/adapters/lmdeploy/tests/: test_lmdeploy_async.py  test_lmdeploy_backend.py  test_lmdeploy_compress.py
src/adapters/mii/kvcache_mii/: __init__.py  async_load.py  backend.py
src/adapters/mii/tests/: test_mii_async.py  test_mii_backend.py  test_mii_compress.py
src/adapters/rust/: Cargo.toml  README.md  build.rs
src/adapters/rust/src/: ffi.rs  lib.rs
src/adapters/rust/tests/: round_trip.rs
src/adapters/sglang/: README.md  pyproject.toml
src/adapters/sglang/kvcache_sglang/: __init__.py  backend.py  connector.py
src/adapters/sglang/tests/: conftest.py  test_sglang_compress.py
src/adapters/tgi/kvcache_tgi/: __init__.py  async_load.py  backend.py
src/adapters/tgi/tests/: test_tgi_async.py  test_tgi_backend.py  test_tgi_compress.py
src/adapters/trtllm/: CMakeLists.txt  README.md
src/adapters/trtllm/include/kvcache_trtllm/: backend.h
src/adapters/trtllm/src/: backend.cpp
src/adapters/trtllm/tests/: backend_test.cpp
src/adapters/vllm/: README.md  pyproject.toml
src/adapters/vllm/kvcache_vllm/: __init__.py  async_load.py  connector.py  layer_accumulator.py  vllm_bridge.py
src/adapters/vllm/tests/: conftest.py  test_e2e_demo.py  test_vllm_bridge.py
src/bench/: CMakeLists.txt  bench_art_gc.cpp  bench_common.h  bench_fetch.cpp  bench_lookup.cpp  bench_priority.cpp  bench_priority_grpc.cpp
src/control-plane/: Makefile  README.md  go.mod  go.sum
src/control-plane/cmd/cp/: main.go
src/control-plane/internal/config/: doc.go
src/control-plane/internal/etcd/: client.go
src/control-plane/internal/membership/: doc.go  registry.go  registry_test.go  view.go  view_test.go
src/control-plane/internal/quota/: doc.go
src/control-plane/internal/routing/: doc.go
src/control-plane/internal/server/: server.go
src/core-abi/: CMakeLists.txt
src/core-abi/src/: headless_node.cpp  headless_node.h  kv_abi.cpp  kv_status.cpp
src/core-abi/src/replication/: replication_consumer.cpp  replication_consumer.h
src/core/common/: CMakeLists.txt  b3_facade.cpp  b3_facade.h  blake3.cpp  blake3.h  hashing.cpp  hashing.h  locator.cpp  locator.h  logging.cpp  logging.h  metrics.cpp  metrics.h  trace.cpp  trace.h  value_policy.h  value_policy_kv.cpp  value_policy_kv.h  value_policy_tool_result.cpp  value_policy_tool_result.h
src/core/proto/: CMakeLists.txt  README.md  cp.proto  events.proto  node.proto
src/deploy/docker/: Dockerfile.cp  Dockerfile.kvstore-node
src/deploy/helm/kvcache/: Chart.yaml  README.md  RUNBOOK.md  values.yaml
src/deploy/k8s/crd/: README.md  kvcache.io_kvcacheclusters.yaml  kvcache.io_kvcachetenants.yaml
src/include/kvcache/: kv_abi.h  kv_errors.h  kv_types.h  shmem_wire.h
src/kvagent/: CMakeLists.txt  README.md
src/kvagent/src/: main.cpp
src/kvagent/src/bloom_view/: bloom_view.cpp  bloom_view.h
src/kvagent/src/router/: hrw_resolver.cpp  hrw_resolver.h  router.cpp  router.h
src/kvagent/src/routing_cache/: routing_cache.cpp  routing_cache.h
src/kvagent/src/shmem_ring/: doorbell.cpp  doorbell.h  sq_cq.cpp  sq_cq.h
src/kvctl/: Makefile  README.md  go.mod  go.sum
src/kvctl/cmd/kvctl/: main.go  main_test.go
src/kvstore-node/: CMakeLists.txt  README.md
src/kvstore-node/src/: main.cpp
src/kvstore-node/src/cluster/: bloom_publisher.cpp  bloom_publisher.h  drain_gate.cpp  drain_gate.h  etcd_client.cpp  etcd_client.h  identity_watcher.cpp  identity_watcher.h  membership_fsm.cpp  membership_fsm.h  node_directory.cpp  node_directory.h  node_registrar.cpp  node_registrar.h
src/kvstore-node/src/codec/: kv_tensor_codec.cpp  kv_tensor_codec.h
src/kvstore-node/src/grpc/: grpc_replica_source.cpp  grpc_replica_source.h  grpc_server.cpp  grpc_server.h  node_data_service.cpp  node_data_service.h
src/kvstore-node/src/ingest/: mutable_buffer.cpp  mutable_buffer.h  seal.cpp  seal.h  watermark.cpp  watermark.h
src/kvstore-node/src/meta/: rocksdb_store.cpp  rocksdb_store.h
src/kvstore-node/src/obs/: logs.cpp  logs.h  metrics.cpp  metrics.h
src/kvstore-node/src/persist/: state_wal.cpp  state_wal.h
src/kvstore-node/src/prefix/: art_index.cpp  art_index.h  epoch.cpp  epoch.h  kv_event_stream.cpp  kv_event_stream.h  lpm.cpp  lpm.h  refcount.cpp  refcount.h
src/kvstore-node/src/qos/: priority_ctx.cpp  priority_ctx.h  quota.cpp  quota.h  tenant.cpp  tenant.h
src/kvstore-node/src/replication/: replication_consumer.cpp  replication_consumer.h  replication_cursor.h
src/kvstore-node/src/routing/: bloom_sketch.cpp  bloom_sketch.h  hrw.cpp  hrw.h
src/kvstore-node/src/runtime/: node_runtime.cpp  node_runtime.h  regulated_flags.cpp  regulated_flags.h
src/kvstore-node/src/security/: audit.cpp  audit.h  boundary_deny_observer.h  (+10 more)
src/operator/: README.md  go.mod
src/tests/: README.md
src/tests/e2e/: README.md
src/tests/unit/: CMakeLists.txt  README.md
(+131 files in other folders)
